# cpp-bank-management-system-oop

./: .gitignore  CMakeLists.txt  Global.h  InterfaceCommunication.h  LoginRegister.txt  README.md  TransferLog.txt  Users.txt  clsAddNewClientScreen.h  clsAddNewUserScreen.h  clsBankClient.h  clsClientListScreen.h  clsCurrenciesListScreen.h  clsCurrency.h  clsCurrencyCalculatorScreen.h  clsCurrencyExchangeMainScreen.h  clsDate.h  clsDeleteClientScreen.h  clsDeleteUserScreen.h  clsDepositScreen.h  clsFindClientScreen.h  clsFindCurrencyScreen.h  clsFindUserScreen.h  clsInputValidate.h  clsListUsersScreen.h  clsLoginRegisterScreen.h  clsLoginScreen.h  clsMainScreen.h  clsManageUsersScreen.h  clsPerson.h  clsScreen.h  clsString.h  clsTotalBalancesScreen.h  clsTransactionsScreen.h  clsTransferLogScreen.h  clsTransferScreen.h  clsUpdateClientScreen.h  clsUpdateCurrencyRateScreen.h  clsUpdateUserScreen.h  clsUser.h  (+3 more)
Core/: clsBankClient.h  clsCurrency.h  clsPerson.h  clsUser.h
Data/: Clients.txt  LoginRegister.txt  Users.txt
Lib/: clsDate.h
Screens/: clsMainScreen.h  clsScreen.h
Screens/Client/: clsAddNewClientScreen.h  clsClientListScreen.h  clsDeleteClientScreen.h  clsDepositScreen.h  clsFindClientScreen.h  clsTotalBalancesScreen.h  clsTransactionsScreen.h  clsTransferLogScreen.h  clsTransferScreen.h  clsUpdateClientScreen.h  clsWithdrawScreen.h
Screens/Currencies/: clsCurrenciesListScreen.h  clsCurrencyCalculatorScreen.h  clsCurrencyExchangeMainScreen.h  clsFindCurrencyScreen.h  clsUpdateCurrencyRateScreen.h
Screens/User/: clsAddNewUserScreen.h  clsFindUserScreen.h  (+6 more)
